microserv-user-account/src/main/java/org/example/microservuseraccount/error/exception/NotExistsException.java
package org.example.microservuseraccount.error.exception;

public class NotExistsException extends RuntimeException{

    public NotExistsException(String message) {
        super(message);
    }
}
